Updates from Overleaf

--- a/sections/05_paper_overview.tex
+++ b/sections/05_paper_overview.tex
@@ -40,7 +40,24 @@ Explainable machine learning model to study decision-to-treat with thrombolysis 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Paper 3: Are the patients who would benefit from thrombolysis the same ones as those receiving it? A machine learning study of the UK stroke registry.\cite{pearn_are_2024}}
+% Paper order changed back. The original order first etsablished thrmbolysis works as expected, then goes on to analyse who is receivnig it. So paper 3 (clinical trial) supoports paper 4 (rather than vice versa).
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Paper 3: Thrombolysis: Are the results from the clinical trial meta-analysis seen in real life outcomes?  A machine learning study of the UK stroke registry.\cite{pearn_thrombolysis_2024}}
+
+\textbf{Study type and population}
+
+Explainable machine learning model to investigate clinical benefit of thrombolysis (in those patients who received thrombolysis), compared with clinical trials. The model was based on 6 years of emergency ischaemic stroke admissions that arrived at an acute stroke team in England and Wales by ambulance after their stroke onset, which did not go on to receive thrombectomy (168,347 patients). Includes 118 acute stroke hospitals (each with at least 250 stroke admissions and at least 10 thrombolysis procedures in the study period).
+
+\textbf{Key findings}
+
+\begin{itemize}
+    \item Thrombolysis was found to be associated with a statistically significant improvement in the odds of having a good outcome using any mRS threshold. Regression analysis predicted a maximum 2.5-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 5 hours 28 minutes post-onset. The observed beneficial effect is very similar to Emberson’s meta-analysis \cite{emberson_effect_2014} of a maximum 2.0-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 6 hours 18 minutes post-onset.
+    
+\end{itemize}
+%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Paper 4: Are the patients who would benefit from thrombolysis the same ones as those receiving it? A machine learning study of the UK stroke registry.\cite{pearn_are_2024}}
 
 \textbf{Study type and population}
 
@@ -57,20 +74,7 @@ Explainable machine learning model to investigate thrombolysis decision making (
     
     \item Individual hospitals vary in balancing maximising benefit from thrombolysis vs. avoiding any possible harm.
 \end{itemize}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Paper 4: Thrombolysis: Are the results from the clinical trial meta-analysis seen in real life outcomes?  A machine learning study of the UK stroke registry.\cite{pearn_thrombolysis_2024}}
-
-\textbf{Study type and population}
-
-Explainable machine learning model to investigate clinical benefit of thrombolysis (in those patients who received thrombolysis), compared with clinical trials. The model was based on 6 years of emergency ischaemic stroke admissions that arrived at an acute stroke team in England and Wales by ambulance after their stroke onset, which did not go on to receive thrombectomy (168,347 patients). Includes 118 acute stroke hospitals (each with at least 250 stroke admissions and at least 10 thrombolysis procedures in the study period).
-
-\textbf{Key findings}
-
-\begin{itemize}
-    \item Thrombolysis was found to be associated with a statistically significant improvement in the odds of having a good outcome using any mRS threshold. Regression analysis predicted a maximum 2.5-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 5 hours 28 minutes post-onset. The observed beneficial effect is very similar to Emberson’s meta-analysis \cite{emberson_effect_2014} of a maximum 2.0-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 6 hours 18 minutes post-onset.
-    
-\end{itemize}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Paper 5: Identifying levers for improving thrombolysis use and outcomes – combining clinical pathway simulation and machine learning applied to the UK stroke registry.\cite{pearn_identifying_2024}}
 
