--- a/sections/06_data.tex
+++ b/sections/06_data.tex
@@ -8,19 +8,21 @@ The following data fields from SSNAP were used in the modelling:
 
 \begin{itemize}
 
+% Coding 0-1 for Yes/No not needed here
+
     \item \textit{Stroke team}: Stroke team attended (hospital identifier).
 
     \item \textit{Age}: Age (as midpoint of 5 year age bands).
 
-    \item \textit{Sex}: Sex of patient (male/female).
+    \item \textit{Sex}: Sex of patient. % Keep as 'sex'; 'gender' more about psychological identity/alignment than physical/biological attributes
 
-    \item \textit{Atrial fibrillation diagnosis}: Patient had a diagnosis of atrial fibrillation, either on arrival or diagnosed during admission (1 = Yes, 0 = No).
+    \item \textit{Atrial fibrillation diagnosis}: Patient had a diagnosis of atrial fibrillation, either on arrival or diagnosed during admission.
 
-    \item \textit{Use of atrial fibrillation (AF) anticoagulants}: Use of prior anticoagulant for atrial fibrillation (1 = Yes, 0 = No).
+    \item \textit{Use of atrial fibrillation (AF) anticoagulants}: Use of prior anticoagulant for atrial fibrillation.
 
     \item \textit{Onset known}: Whether onset was known, and if known whether it was considered to be known precisely or was a best estimate.
 
-    \item \textit{Onset during sleep}: Did stroke occur in sleep? (1 = Yes, 0 = No).
+    \item \textit{Onset during sleep}: Did stroke occur in sleep?
 
     \item \textit{Onset-to-arrival time}: Time from onset of stroke to arrival at hospital (minutes), when known.
 
@@ -38,9 +40,7 @@ The following data fields from SSNAP were used in the modelling:
     
 \end{itemize}
 
-Appendix section {sec:stats} provides descriptive statistics for patients across stroke teams.
-
-See sections \ref{sec:paper_2} to \ref{sec:paper_5} for further details on data used for each component of the modelling work.
+Appendix section\ref{sec:stats} provides descriptive statistics for patients across stroke teams. See sections \ref{sec:paper_2} to \ref{sec:paper_5} for further details on data used for each component of the modelling work.
 
 
 
