Updates from Overleaf

--- a/sections/50_appendix.tex
+++ b/sections/50_appendix.tex
@@ -126,11 +126,11 @@ The following outlines the key objectives set out in the original bid, and what 
 
 \subsection{Objective 1: Expansion of SAMueL-1 modelling}
 
-\subsubsection{Objective}
+\subsubsection*{Objective}
 
 Expansion of previous (SAMueL-1) modelling to include: 1) outcome and adverse event prediction at patient-level, 2) inclusion of pre-hospital times in pathway model, 3) use of organisational factors (such as staffing) in predicting use of thrombolysis, and 4) piloting of a model that incorporates use of thrombectomy alongside thrombolysis.
 
-\subsubsection{Project outputs}
+\subsubsection*{Project outputs}
 
 All objectives were achieved and reported:
 
@@ -152,13 +152,13 @@ All objectives were achieved and reported:
 
 \subsection{Objective 2: Incorporation of health economic outcomes}
 
-\subsubsection{Objective}
+\subsubsection*{Objective}
 
 Incorporation of health economic outcomes (Quality Adjusted Life Years, QALYs): These will be adapted from other NIHR projects involving this team that have already developed health economic models for thrombolysis in acute ischaemic stroke.
 
 This objective was achieved and reported:
 
-\subsubsection{Project outputs}
+\subsubsection*{Project outputs}
 
 \begin{itemize}
     \item A health economics model for stroke has been coded by the SAMueL team and is available on GitHub (\url{https://github.com/stroke-optimist/stroke-lifetime} and available for installation on Python from PyPI (\url{https://pypi.org/project/stroke-lifetime/}).
@@ -169,12 +169,12 @@ This objective was achieved and reported:
 
 \subsection{Objective 3: Promote acceptance of the modelling by increased transparency and explainability}
 
-\subsubsection{Objective}
+\subsubsection*{Objective}
 
 Promote acceptance of the modelling by increased transparency and explainability: 1) make use of Shapley values to show the contribution of individual features to the prediction that the model is making, 2) improved methods for clustering of patients to clarify patterns of differences in clinical decision-making between hospitals and to allow identification of ‘similar hospitals’ (by patient population) for comparison, 3) investigation of bias in model (e.g. accuracy analysis by patient subgroups), 4) generation of dashboards and other interrogative methods.
 
 
-\subsubsection{Project outputs}
+\subsubsection*{Project outputs}
 
 All objectives were achieved and reported, except we did not have the data to analyse model accuracy by key demographic groups (as we were concerned about possible identification of people by inclusion of ethnicity; though we have a plan for for for future work):
 
@@ -191,11 +191,11 @@ All objectives were achieved and reported, except we did not have the data to an
 
 \subsection{Objective 4: Generation of synthetic data and artificial patient vignettes}
 
-\subsubsection{Objective}
+\subsubsection*{Objective}
 
 Generation of synthetic data and artificial patient vignettes: 1) build on pilot work already performed for generating synthetic patient-level stroke data that may be shared freely and used for discussion of ’virtual’ patients, 2) automatic generation of artificial clinical vignettes from real or synthetic SSNAP data.
 
-\subsubsection{Project outputs}
+\subsubsection*{Project outputs}
 
 These objectives were achieved, but in a slightly different way to planned:
 
@@ -209,13 +209,11 @@ These objectives were achieved, but in a slightly different way to planned:
 
 \subsection{Objective 5: Co-production of project outputs with clinicians to promote acceptance and use for local quality improvement}
 
-\subsubsection{Objective}
-
-\textbf{Original objective:}
+\subsubsection*{Original objective:}
 
 Co-production of project outputs with clinicians to promote acceptance and use for local quality improvement: By using both information gathering (through interviews) and intervention refinement (in workshops) we will incrementally modify and improve the content and style of our intervention (SAMueL tool). Working with our Public and Patient Involvement (PPI) group we will also produce key public-facing output.
 
-\textbf{Amended objective}
+\subsubsection*{Amended objective}
 
 With agreement of NIHR (through a \textit{Variation to Contract} agreement) the qualitative approach was altered to:
 
@@ -227,7 +225,7 @@ What should a machine-learning model based on SSNAP data look like, do, and deli
 \end{enumerate}
 
 
-\subsubsection{Project outputs}
+\subsubsection*{Project outputs}
 
 All objectives of the revised objectives were met (section \ref{sec:paper_1}).
 
