--- a/main.tex
+++ b/main.tex
@@ -85,7 +85,7 @@
 \include{sections/14_paper_4}
 \include{sections/15_paper_5}
 \input{sections/20_other_outputs}
-\include{sections/21_discussion}
+\input{sections/21_discussion}
 \input{sections/23_other}
 
 
