--- a/sections/14_paper_4.tex
+++ b/sections/14_paper_4.tex
@@ -10,9 +10,9 @@ To investigate, using explainable machine learning, the overlap and differences 
 
 \subsubsection{Outcome prediction}
 
-Data for a total of 78,396 ischaemic stroke patients who attended one of 111 emergency stroke hospitals in England and Wales and had brain imaging within 255 minutes of stroke onset, from 2016 to 2021, were extracted from the Sentinel Stroke National Audit Programme (SSNAP). We used explainable machine learning (XGBoost\cite{chen_xgboost_2016} with SHAP\cite{lundberg_unified_2017}) to examine the effect of patient characteristics, hospital attended, and use/time of thrombolysis on the patients’ predicted outcome (modified Rankin Scale, mRS) at discharge. Patients on anticoagulants for atrial fibillation (representing 12.9\% of the population) were excluded from the study population as these patients may be at risk of adverse outcome that is not predicted by the machine learning model (as it is likely thrombolysis is only given to patients on anticoagulants when when it has been shown that blood clotting is normal).
+Data for a total of 78,396 ischaemic stroke patients who attended one of 111 emergency stroke hospitals in England and Wales and had brain imaging within 255 minutes of stroke onset, from 2016 to 2021, were extracted from the Sentinel Stroke National Audit Programme (SSNAP). We used explainable machine learning (XGBoost\cite{chen_xgboost_2016} with SHAP\cite{lundberg_unified_2017}) to examine the effect of patient characteristics, hospital attended, and use/time of thrombolysis on the patients’ predicted outcome (modified Rankin Scale, mRS) at discharge. The data excludes patients on anticoagulants for atrial fibillation (representing 12.9\% of the population) as these patients may be at risk of adverse outcome that is not predicted by the machine learning model (as it is likely thrombolysis is only given to patients on anticoagulants when when it has been shown that blood clotting is normal).
 
-The model predicts probability of each mRS category outcome.  \textit{Probability-weighted mRS} was used as a measure of the mid-point location of disability; it is the sum of each mRS outcome multiplied by the probability of that outcome occurring
+The model predicts probability of each mRS category outcome. \textit{Probability-weighted mRS} was used as a measure of the mid-point location of disability; it is the sum of each mRS outcome multiplied by the probability of that outcome occurring
 
 We predicted the expected effect of thrombolysis for all patients, and compared who would benefit from thrombolysis with those who actually received thrombolysis. We used a conservative definition to determine whether a patient would likely have a better outcome with treatment from the two probability distributions, where both of these criteria must be met: 
 
