--- a/sections/23_other.tex
+++ b/sections/23_other.tex
@@ -57,11 +57,11 @@ Work described here has been presented at the following conferences (presentatio
 
 Pearn, K., Allen, M., Laws, A., Everson, R. \& James, M. (2023). What would other emergency stroke teams do? Using explainable machine learning to understand variation in thrombolysis practice. European Stroke Organisation Conference. Zenodo. https://doi.org/10.5281/zenodo.7878306
 
-Pearn, K., Allen, M., Laws, A., Everson, R. \& James, M. (2023). WHAT WOULD OTHER EMERGENCY STROKE TEAMS DO? Using explainable machine learning to understand variation in thrombolysis (clot-busting) practice. AI UK 2023 (Turing Institute), London, UK. Zenodo. https://doi.org/10.5281/zenodo.7759059
+Pearn, K., Allen, M., Laws, A., Everson, R. \& James, M. (2023). What would other emergency stroke teams do? Using explainable machine learning to understand variation in thrombolysis (clot-busting) practice. AI UK 2023 (Turing Institute), London, UK. Zenodo. https://doi.org/10.5281/zenodo.7759059
 
-Pearn, K., Allen, M., Laws, A., \& James, M. (2024). VARIATION IN THROMBOLYSIS USE AND THE POTENTIAL EFFECT ON OUTCOMES IN ENGLAND AND WALES: AN OBSERVATIONAL MACHINE LEARNING STUDY. European Stroke Organisation Conference (ESOC). Zenodo. https://doi.org/10.5281/zenodo.11191491
+Pearn, K., Allen, M., Laws, A., \& James, M. (2024). Variation in thrombolysis use and the potential effect on outcomes in england and wales: an observational machine learning study. European Stroke Organisation Conference (ESOC). Zenodo. https://doi.org/10.5281/zenodo.11191491
 
-Laws, A., Allen, M., Pearn, K., \& James, M. (2024). MODELLING DISABILITY-LEVEL AND UTILITY OUTCOMES DEPENDING ON TIME TO THROMBOLYSIS AND MECHANICAL THROMBECTOMY. European Stroke Organisation Conference (ESOC). Zenodo. https://doi.org/10.5281/zenodo.11191633
+Laws, A., Allen, M., Pearn, K., \& James, M. (2024). Modelling disability-level and utility outcomes depending on time to thrombolysis and mechanical thrombectomy. European Stroke Organisation Conference (ESOC). Zenodo. https://doi.org/10.5281/zenodo.11191633
 
 \section{Implications for decision makers}
 
